# auto

./: README.md
rm2025-autoaim-master/: .clang-format  .gitignore  (+4 more)
rm2025-autoaim-master/src/camera_node/: CMakeLists.txt  package.xml
rm2025-autoaim-master/src/camera_node/include/camera_node/: camera_node.hpp  gx_camera.h
rm2025-autoaim-master/src/camera_node/include/camera_node/inc/: DxImageProc.h  GxIAPI.h
rm2025-autoaim-master/src/camera_node/launch/: camera.launch.py
rm2025-autoaim-master/src/camera_node/share/: plugin.xml
rm2025-autoaim-master/src/camera_node/src/: camera_node.cpp  gx_camera.cpp
rm2025-autoaim-master/src/detect_node/: CMakeLists.txt  package.xml
rm2025-autoaim-master/src/detect_node/classic_detector/: CMakeLists.txt
rm2025-autoaim-master/src/detect_node/classic_detector/include/classic_detector/: armor.h  common.h  detector.h  entrance.h  light.h  light_corner_corrector.h  number_classifier.h
rm2025-autoaim-master/src/detect_node/classic_detector/src/: armor.cpp  detector.cpp  entrance.cpp  light.cpp  light_corner_corrector.cpp  number_classifier.cpp
rm2025-autoaim-master/src/detect_node/include/detect_node/: sub_img_node.h
rm2025-autoaim-master/src/detect_node/include/detect_node/frame_processer/: frame_processor.h  high_precision_pose_solver.h  hpps_k.h  pnp_solver.h
rm2025-autoaim-master/src/detect_node/include/detect_node/interface/: i_detector.h  interface.h  mcu.h  rm_interface.h
rm2025-autoaim-master/src/detect_node/include/detect_node/ncd_adapter/: histogram.hpp  ncd_adapter.hpp
rm2025-autoaim-master/src/detect_node/include/detect_node/power_rune_detector/: power_rune_detector.h  power_rune_yolov11.h
rm2025-autoaim-master/src/detect_node/include/detect_node/pt4_detector/: pt4_detector.h  pt4_yolo_v8k.h  yolo-pose.h
rm2025-autoaim-master/src/detect_node/include/detect_node/rv_detector/: rv_detector.h  rv_detector_core.h  rv_number_classifier.h
rm2025-autoaim-master/src/detect_node/launch/: dt.launch.py
rm2025-autoaim-master/src/detect_node/share/: plugin.xml
rm2025-autoaim-master/src/detect_node/src/: sub_img_node.cpp
rm2025-autoaim-master/src/detect_node/src/frame_processer/: frame_processor.cpp
rm2025-autoaim-master/src/detect_node/src/power_rune_detector/: power_rune_detector.cpp  power_rune_yolov11.cpp
rm2025-autoaim-master/src/detect_node/src/pt4_detector/: pt4_detector.cpp  pt4_yolo_v8k.cpp  yolo-pose.cpp
rm2025-autoaim-master/src/detect_node/src/rv_detector/: rv_detector.cpp  rv_detector_core.cpp  rv_number_classifier.cpp
rm2025-autoaim-master/src/estimate_node/: CMakeLists.txt  package.xml
rm2025-autoaim-master/src/estimate_node/include/estimate_node/: tracker_pub_node.h  tracker_sub_node.h
rm2025-autoaim-master/src/estimate_node/include/estimate_node/ergo_target_selector/: ergo_target_selector.h
rm2025-autoaim-master/src/estimate_node/include/estimate_node/interface/: i_algorithm.h  i_tracker.h  interface.h  mcu.h
rm2025-autoaim-master/src/estimate_node/include/estimate_node/kinematics_solver/: kinematics_solver.h
rm2025-autoaim-master/src/estimate_node/include/estimate_node/multichannel_tracker/: multichannel_tracker.h
rm2025-autoaim-master/src/estimate_node/include/estimate_node/pose_solver/: high_precision_pose_solver.h  hpps_k.h  pnp_solver.h  pose_solver.h
rm2025-autoaim-master/src/estimate_node/launch/: est.launch.py
rm2025-autoaim-master/src/estimate_node/share/: plugin.xml
rm2025-autoaim-master/src/estimate_node/src/: tracker_pub_node.cpp  tracker_sub_node.cpp
rm2025-autoaim-master/src/estimate_node/src/ergo_target_selector/: ergo_target_selector.cpp
rm2025-autoaim-master/src/estimate_node/src/kinematics_solver/: kinematics_solver.cpp  rv_algo.cpp  slpr_algo.cpp  sspr_algo.cpp  static_algo.cpp
rm2025-autoaim-master/src/estimate_node/src/multichannel_tracker/: irv_filter.cpp  irv_tracker.cpp  multichannel_tracker.cpp  power_rune_tracker.cpp  slpr_filter.cpp  sspr_filter.cpp  static_tracker.cpp  triaxial_velocity_filter.cpp
rm2025-autoaim-master/src/estimate_node/src/pose_solver/: high_precision_pose_solver.cpp  hpps_k.cpp  pnp_solver.cpp  pose_solver.cpp
rm2025-autoaim-master/src/mcu_node/: CMakeLists.txt  package.xml
rm2025-autoaim-master/src/mcu_node/include/mcu_node/: mcu.h  mcu_node.h
rm2025-autoaim-master/src/mcu_node/include/mcu_node/serial/: communication.h  crc_16.hpp  packer.h  protocol.hpp  protocol_data.h  protocol_pack.h  serial.h
rm2025-autoaim-master/src/mcu_node/launch/: mcu.launch.py  mcu_debug.launch.py
rm2025-autoaim-master/src/mcu_node/share/: plugin.xml
rm2025-autoaim-master/src/mcu_node/src/: mcu.cpp  mcu_main.cpp  mcu_node.cpp  serial.cpp
rm2025-autoaim-master/src/rm2025autoaim/: CMakeLists.txt  package.xml
rm2025-autoaim-master/src/rm2025autoaim/config/: launch_params.yaml
rm2025-autoaim-master/src/rm2025autoaim/launch/: container.launch.py  rm.launch.py
rm2025-autoaim-master/src/rm2025autoaim/src/: mtthredext.cpp
rm2025-autoaim-master/src/sensor_sync_node/: CMakeLists.txt  package.xml
rm2025-autoaim-master/src/sensor_sync_node/include/sensor_sync_node/: sensor_sync_node.hpp
rm2025-autoaim-master/src/sensor_sync_node/launch/: sync.launch.py
rm2025-autoaim-master/src/sensor_sync_node/share/: plugin.xml
rm2025-autoaim-master/src/sensor_sync_node/src/: sensor_sync_node.cpp
rm2025-autoaim-master/src/utils/calculate/: CMakeLists.txt  package.xml
rm2025-autoaim-master/src/utils/calculate/include/calculate/: basic_calculate.h  extended_kalman_filter.hpp  line_intersect_sphere_solver.h  trajectory_calculate.h
rm2025-autoaim-master/src/utils/calculate/src/: extended_kalman_filter.cpp  line_intersect_sphere_solver.cpp  trajectory_calculate.cpp
rm2025-autoaim-master/src/utils/param_loader/: CMakeLists.txt  package.xml
rm2025-autoaim-master/src/utils/param_loader/include/: param_loader.hpp
rm2025-autoaim-master/src/utils/voml/: CMakeLists.txt  README.md  package.xml
rm2025-autoaim-master/src/utils/voml/include/voml/: details.h  opencv.h  voml.h
rm2025-autoaim-master/src/utils/voml/src/: details.cpp  opencv.cpp
(+59 files in other folders)
