<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Gary20201010@163.com">Ruiyu_Gao</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>voml</depend>
  <depend>robot_mapper</depend>
  <depend>param_loader</depend>
  <depend>angles</depend>
  <depend>interfaces</depend>
  <depend>image_transport</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>





  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components plugin="${prefix}/share/camera_node/plugin.xml"/>
  </export>
</package>
