<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detect_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>param_loader</depend>
  <depend>voml</depend>
  <depend>robot_mapper</depend>
  <depend>calculate</depend>
  <depend>interface</depend>
  <depend>ros_angle</depend>
  <depend>interfaces</depend>
  <depend>mcu_node</depend>
  <depend>vofa_bridge</depend>
  <depend>Eigen3</depend> 
  <depend>openvino</depend>
  <depend>image_transport</depend>
  <depend>rclcpp_components</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  
  <!--
  <depend>cv_bridge</depend>
  -->
  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components plugin="${prefix}/share/detector_node/plugin.xml"/>
  </export>
</package>
