<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>estimate_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>param_loader</depend>
  <depend>voml</depend>
  <depend>robot_mapper</depend>
  <depend>calculate</depend>
  <depend>interface</depend>
  <depend>interfaces</depend>
  <depend>mcu_node</depend>
  <depend>vofa_bridge</depend>
  <depend>ros_angle</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>eigen3</depend>
  <depend>openvino</depend>
  <depend>TBB</depend>
  <depend>rclcpp_components</depend>
  <depend>visualization_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components plugin="${prefix}/share/estimate_node/plugin.xml"/>
  </export>
</package>
